# MST

./: CMakeLists.txt
MST/: CMakeLists.txt  main.cpp
MST/include/: boruvkamst.h
MST/source/: boruvkamst.cpp
graphIO/: CMakeLists.txt  main.cpp
graphIO/include/: Vectorgraph.h
graphIO/src/: Vectorgraph.cpp
